compiler/testData/diagnostics/tests/annotations/AnnotationsForClasses.kt
// RUN_PIPELINE_TILL: BACKEND
annotation <!DEPRECATED_JAVA_ANNOTATION!>@java.lang.Deprecated<!> class my

/* GENERATED_FIR_TAGS: annotationDeclaration */
